--- a/package.json
+++ b/package.json
@@ -9,5 +9,13 @@
         "axios": "^1.6.4",
         "laravel-vite-plugin": "^1.0",
         "vite": "^5.0"
+    },
+    "dependencies": {
+        "@inertiajs/inertia": "^0.11.1",
+        "@inertiajs/inertia-vue3": "^0.6.0",
+        "@vitejs/plugin-vue": "^5.0.4",
+        "bootstrap": "^5.3.3",
+        "bootstrap-vue": "^2.23.1",
+        "vue": "^3.4.26"
     }
 }
